What is new in 2.3

 - Add new directory related operations: opendir(), readdir(),
   releasedir() and fsyncdir().

 - Update kernel ABI so that on dual architectures (e.g. AMD64) 32bit
   binaries work under a 64bit kernel

 - Bugfixes

What is new in 2.2

Userspace changes:

 - Add fuse_file_info structure to file operations, this allows the
   filesystem to return a file handle in open() which is passed to
   read(), write(), flush(), fsync() and release().

 - Add source compatibility with 2.1 and 1.4 releases

 - Binary compatibility with 2.1 release is retained

Kernel changes:

 - Make requests interruptible.  This prevents the filesystem to go
   into an unbreakable deadlock with itself.

 - Make readpages() synchronous.  Asynchronous requests are deadlock
   prone, since they cannot be interrupted (see above)

 - Remove shared-writeable mapping support, which could deadlock the
   machine

 - Remove INVALIDATE userspace initiated request

 - Update ABI to be independent of sizeof(long), so dual-size archs
   don't cause problems

 - Remove /sys/fs/fuse/version.  Version checking is now done through
   the fuse device

 - Replace directory reading method on the kernel interface.  Instead
   of passing an open file descriptor to the kernel, send data through
   the FUSE device, like all other operations.

============================================================================

What is new in 2.1

* Bug fixes

* Improved support for filesystems implementing a custom event-loop

* Add 'pkg-config' support

* Kernel module can be compiled separately

============================================================================

What is new in 1.9

* Lots of bugs fixed

* Minor modifications to the library API

* Improvements to the kernel/userspace interface

* Mounting by non-root made more secure

* Build shared library in addition to the static one

* Consolidated mount options

* Optimized reading under 2.6 kernels

* Direct I/O support
